# ElephantCarpaccioCalculator

./: CMakeLists.txt
src/: CMakeLists.txt  Calculator.cpp  Calculator.h  Result.cpp  Result.h  main.cpp
tests/: CMakeLists.txt  CalculatorTest.cpp
